fix drop-downs
The drop-downs in main/index.html were not overlapping the content
below, but rather pushing it down.

The fix I came up with is the quickest/simplest I could come up with
that was halfway acceptable.  It's not particularly good; the problem
should be revisited at some point.

One problem I ran into is that many CSS directives I introduced were
being overruled by directives specified for the `#content` element.
Having CSS directive specified by ID for such an encompassing element
makes it difficult to specify the appearance of classes of contained
elements.  At any rate, to eliminate the guesswork, I just tacked
`!important` to everything I added to main.css, whether it was needed
or not, to protect them from being overridden by `#content`-specific
directives elsewhere.

--- a/niepel_2013/static/main.css
+++ b/niepel_2013/static/main.css
@@ -33,6 +33,26 @@ h2 {
 .sibling-browser-list {
   display: none;
 }
+.sibling-browser > li{
+  position:relative;         !important;
+  margin:0                   !important;
+  padding:0 1em              !important;
+  background-color:#fff;     !important;
+  z-index:10;                !important;
+}
+.sibling-browser-list{
+  position:absolute          !important;
+  margin:0                   !important;
+  padding:8px 0              !important;
+  width:100%                 !important;
+  border:1px solid #e0e0e0;  !important;
+  background-color:#fff;     !important;
+}
+.sibling-browser-list > li{
+  margin:0                   !important;
+  padding:0 1em              !important;
+  list-style:none            !important;
+}
 .lookup-table-container {
   position: relative;
   margin: 0 auto;
